--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
 
 <body>
-
+change for test git
 <%= yield %>
 <a href="/contacts" class="current"><span></span>Home</a>
             &nbsp; &nbsp;
